fixed bugs and update configs